--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -5,21 +5,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "commons.fullname" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" .name "component" $component) }}
+  name: {{ include "commons.fullname" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" .name "component" .) }}
   labels:
-    {{ include "commons.labels" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" .name "component" $component) | nindent 4 }}
+    {{ include "commons.labels" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" .name "component" .) | nindent 4 }}
 spec:
   replicas: {{ default 1 .replicas }}
   selector:
     matchLabels:
-      {{- include "commons.selectorLabels" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" .name "component" $component) | nindent 6 }}
+      {{ include "commons.selectorLabels" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" .name "component" .) | nindent 6 }}
   template:
     metadata:
       labels:
-        {{- include "commons.selectorLabels" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" .name "component" $component) | nindent 8 }}
+        {{ include "commons.selectorLabels" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" .name "component" .) | nindent 8 }}
     spec:
-      {{- $sc := .securityContext | default (dict) }}
-      {{- $gsc := $.Values.global.securityContext | default (dict) }}
       securityContext:
         {{- if hasKey $sc "runAsUser" }}
         runAsUser: {{ $sc.runAsUser }}
@@ -89,17 +87,21 @@ spec:
             {{- range . }}
             - name: {{ .name }}
               mountPath: {{ .mountPath }}
+              {{- with .subPath }}
+              subPath: {{ . }}
+              {{- end }}
             {{- end }}
           {{- end }}
         {{- end }}
       {{- end }}
+
       containers:
-        - name: {{ .name | default $component.name }}
+        - name: {{ default $component.name .name }}
+          image: {{ .image.repository }}:{{ .image.tag | default "latest" }}
           {{- with .securityContext }}
           securityContext:
             {{- toYaml . | nindent 12 }}
           {{- end }}
-          image: {{ .image.repository }}:{{ .image.tag | default "latest"  }}
           env:
             - name: TZ
               value: {{ $.Values.global.timezone | quote }}
@@ -119,9 +121,9 @@ spec:
                 {{- end }}
               {{- end }}
             {{- end }}
-          {{- if .volumeMounts }}
+          {{- with .volumeMounts }}
           volumeMounts:
-            {{- range .volumeMounts }}
+            {{- range . }}
             - name: {{ .name }}
               mountPath: {{ .mountPath }}
               {{- with .subPath }}
@@ -164,11 +166,12 @@ spec:
           resources:
             {{- toYaml . | nindent 12 }}
           {{- end }}
+
         {{ include "commons.sidecars" (dict "component" $component "Values" $.Values) | nindent 8 }}
 
       {{- with .volumes }}
       volumes:
-      {{- range . }}
+        {{- range . }}
         {{- if .configMap }}
         - name: {{ .name }}
           configMap:
@@ -176,20 +179,17 @@ spec:
             {{- with .configMap.readOnly }}
             readOnly: {{ . }}
             {{- end }}
-        {{- else if .persistentVolumeClaim }}
+          {{- else if .persistentVolumeClaim }}
         - name: {{ .name }}
           persistentVolumeClaim:
             claimName: {{ include "commons.getValue" (dict "Values" $.Values "Chart" $.Chart "Release" $.Release "component" $component "value" .persistentVolumeClaim.claimName) }}
-            {{- with .persistentVolumeClaim.subPath }}
-            subPath: {{ . }}
-            {{- end }}
             {{- with .persistentVolumeClaim.readOnly }}
             readOnly: {{ . }}
             {{- end }}
-        {{- else }}
+          {{- else }}
         - {{ toYaml . | nindent 10 | trim }}
+          {{- end }}
         {{- end }}
-      {{- end }}
       {{- end }}
 ---
 {{- end }}
