--- a/charts/commons/tests/deployments_test.yaml
+++ b/charts/commons/tests/deployments_test.yaml
@@ -68,7 +68,7 @@ tests:
           path: spec.template.spec.volumes[0].persistentVolumeClaim.claimName
           value: test-nginx-data-pvc
       - equal:
-          path: spec.template.spec.volumes[0].persistentVolumeClaim.subPath
+          path: spec.template.spec.containers[0].volumeMounts[0].subPath
           value: data
   - it: Vérifie le Deployment vscode
     documentSelector:
