--- a/charts/commons/tests/values/values.yaml
+++ b/charts/commons/tests/values/values.yaml
@@ -66,6 +66,10 @@ components:
   - name: nginx
     deployment:
       replicas: 2
+      initContainers:
+        - name: setup-volume
+          image:
+            repository: alpine
       image:
         repository: nginx
         tag: latest
@@ -103,11 +107,11 @@ components:
       volumeMounts:
         - name: config
           mountPath: /etc/config
+          subPath: data
       volumes:
         - name: data
           persistentVolumeClaim:
             claimName: __components__pvc__data-pvc
-            subPath: data
     service:
       type: ClusterIP
       annotations:
