--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -47,9 +47,7 @@ spec:
           image: {{ .image.repository }}:{{ .image.tag | default "latest"  }}
           {{- with .command }}
           command:
-            {{- range . }}
-            - {{ . }}
-            {{- end }}
+            {{ toYaml . | indent 12 }}
           {{- end }}
           {{- with .args }}
           args:
