--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -47,7 +47,7 @@ spec:
           image: {{ .image.repository }}:{{ .image.tag | default "latest"  }}
           {{- with .command }}
           command:
-            {{ toYaml . | indent 10 }}
+            {{ toYaml . | nindent 10 }}
           {{- end }}
           {{- with .args }}
           args:
