--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -51,9 +51,7 @@ spec:
           {{- end }}
           {{- with .args }}
           args:
-            {{- range . }}
-            - {{ . }}
-            {{- end }}
+            {{ toYaml . | nindent 10 }}
           {{- end }}
           {{- with .env }}
           env:
