--- a/charts/commons/templates/pvc.yaml
+++ b/charts/commons/templates/pvc.yaml
@@ -3,7 +3,7 @@
 {{- $component := . }}
 {{- range $component.volumes }}
 {{- $volume := . }}
-{{- $pvc := .pvc }}
+{{- $pvc := $volume.pvc }}
 {{- with $pvc.spec }}
 apiVersion: v1
 kind: PersistentVolumeClaim
