--- a/charts/commons/templates/pvc.yaml
+++ b/charts/commons/templates/pvc.yaml
@@ -1,13 +1,10 @@
 {{- $components := include "commons.withAddons" . | fromYamlArray }}
 {{- range $components }}
 {{- $component := . }}
-{{- range $component.volumes }}
-apiVersion: v1
-kind: PersistentVolumeClaim
+{{- range $component.deployment.volumes }}
 {{- $volume := . }}
 {{- $pvc := $volume.pvc }}
 {{- if $pvc }}
-TATA: 4
 {{- with $pvc.spec }}
 apiVersion: v1
 kind: PersistentVolumeClaim
