--- a/charts/commons/tests/pvc_test.yaml
+++ b/charts/commons/tests/pvc_test.yaml
@@ -41,11 +41,8 @@ tests:
   - it: Vérifie le PVC redis-data
     documentSelector:
       path: metadata.name
-      value: test-redis-data
+      value: test-redis-redis-data
     asserts:
-      - equal:
-          path: metadata.name
-          value: test-redis-data
       - equal:
           path: spec.resources.requests.storage
           value: 1Gi
