--- a/charts/commons/templates/configmap.yaml
+++ b/charts/commons/templates/configmap.yaml
@@ -1,20 +1,24 @@
 {{- $components := include "commons.withAddons" . | fromYamlArray }}
 {{- range $components }}
 {{- $component := . }}
-{{- with $component.configMap }}
-{{- range $i, $configmap := . }}
+{{- range $component.deployment.volumes }}
+{{- $volume := . }}
+{{- $configMap := $volume.configMap }}
+{{- if $configMap }}
+{{- with $configMap.spec }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "commons.fullname" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" (default (printf "configmap-%d" $i) $configmap.name) "component" $component) }}
+  name: {{ include "commons.fullname" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" (default $volume.name $configmap.name) "component" $component) }}
   labels:
-    {{ include "commons.labels" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" (default (printf "configmap-%d" $i) $configmap.name) "component" $component) | nindent 4 }}
+    {{ include "commons.labels" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" (default $volume.name $configmap.name) "component" $component) | nindent 4 }}
 data:
   {{- range $filename, $content := $configmap.data }}
   {{ $filename }}: |-
   {{ $content | nindent 4 }}
   {{- end }}
 ---
+{{- end }}
 {{- end }}
 {{- end }}
 {{- end }}
