--- a/charts/commons/tests/values/values.yaml
+++ b/charts/commons/tests/values/values.yaml
@@ -126,6 +126,15 @@ components:
               accessMode: ReadWriteOnce
               storage: 2Gi
               storageClassName: local-path
+        - name: config
+          configMap:
+            name: config
+            spec:
+              data:
+                config.yaml: 'key: value'
+                toto.sh: |-
+                  #!/bin/sh
+                  echo "toto"
     service:
       type: ClusterIP
       annotations:
@@ -149,13 +158,6 @@ components:
         - hosts:
             - web.mondomaine.local
           secretName: web-cert
-    configMap:
-      - name: config
-        data:
-          config.yaml: 'key: value'
-          toto.sh: |-
-            #!/bin/sh
-            echo "toto"
     postgres:
       enabled: true
       image:
