--- a/charts/commons/templates/configmap.yaml
+++ b/charts/commons/templates/configmap.yaml
@@ -9,11 +9,11 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "commons.fullname" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" (default $volume.name $configmap.name) "component" $component) }}
+  name: {{ include "commons.fullname" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" (default $volume.name $configMap.name) "component" $component) }}
   labels:
-    {{ include "commons.labels" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" (default $volume.name $configmap.name) "component" $component) | nindent 4 }}
+    {{ include "commons.labels" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" (default $volume.name $configMap.name) "component" $component) | nindent 4 }}
 data:
-  {{- range $filename, $content := $configmap.data }}
+  {{- range $filename, $content := $configMap.data }}
   {{ $filename }}: |-
   {{ $content | nindent 4 }}
   {{- end }}
