--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -164,10 +164,10 @@ spec:
         {{- if .configMap }}
         - name: {{ .name }}
           configMap:
-            {{- if .configMap.spec }}
-            name: {{ include "commons.fullname" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" (default .name .configMap.name) "component" $component) }}
-            {{- else }}
+            {{- if .configMap.useExisting }}
             name: {{ include "commons.getValue" (dict "Values" $.Values "Chart" $.Chart "Release" $.Release "component" $component "value" .configMap.name) }}
+            {{- else }}
+            name: {{ include "commons.fullname" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" (default .name .configMap.name) "component" $component) }}
             {{- end }}
             {{- with .configMap.readOnly }}
             readOnly: {{ . }}
@@ -175,10 +175,10 @@ spec:
         {{- else if .pvc }}
         - name: {{ .name }}
           persistentVolumeClaim:
-          {{- if .pvc.spec }}
-            claimName: {{ include "commons.fullname" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" (default .name .pvc.name) "component" $component) }}
-            {{- else }}
+            {{- if .pvc.useExisting }}
             claimName: {{ include "commons.getValue" (dict "Values" $.Values "Chart" $.Chart "Release" $.Release "component" $component "value" .pvc.name) }}
+            {{- else }}
+            claimName: {{ include "commons.fullname" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" (default .name .pvc.name) "component" $component) }}
             {{- end }}
             {{- with .pvc.readOnly }}
             readOnly: {{ . }}
