--- a/charts/commons/values.yaml
+++ b/charts/commons/values.yaml
@@ -7,6 +7,7 @@ global:
     storage:
       size: "1Gi"
       storageClassName: ""
+      accessMode: "ReadWriteOnce" 
   ingress:
     className: traefik
   securityContext:
