test ajout volume mount vscode

--- a/charts/commons/tests/values/values.yaml
+++ b/charts/commons/tests/values/values.yaml
@@ -180,6 +180,12 @@ addons:
       repository: codercom/code-server
       tag: 39
     port: 8080
+    volumes:
+      volumeMount:
+        mountPath: "/config/toto"
+      name: "toto"
+      pvc:
+        name: __nginx__pvc__data-2-pvc
     ingress:
       enabled: false
   redis:
