--- a/charts/commons/tests/deployments_test.yaml
+++ b/charts/commons/tests/deployments_test.yaml
@@ -92,15 +92,27 @@ tests:
           value: codercom/code-server:39
       - equal:
           path: spec.template.spec.containers[0].volumeMounts[0].mountPath
-          value: "/config/toto"
+          value: "/home/coder/project"
       - equal:
           path: spec.template.spec.containers[0].volumeMounts[0].name
+          value: "vscode-data"
+      - equal:
+          path: spec.template.spec.volumes[0].name
           value: "toto"
       - equal:
-          path: spec.template.spec.containers[0].volumes[0].name
+          path: spec.template.spec.volumes[0].persistentVolumeClaim.claimName
+          value: "test-nginx-data-pvc"
+      - equal:
+          path: spec.template.spec.containers[0].volumeMounts[1].mountPath
+          value: "/config/toto"
+      - equal:
+          path: spec.template.spec.containers[0].volumeMounts[1].name
           value: "toto"
       - equal:
-          path: spec.template.spec.containers[0].volumes[0].persistentVolumeClaim.claimName
+          path: spec.template.spec.volumes[1].name
+          value: "toto"
+      - equal:
+          path: spec.template.spe.volumes[1].persistentVolumeClaim.claimName
           value: "test-nginx-data-pvc"
 
   - it: Vérifie le Deployment redis
