--- a/charts/commons/templates/configmap.yaml
+++ b/charts/commons/templates/configmap.yaml
@@ -13,7 +13,7 @@ metadata:
     {{ include "commons.labels" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" (default $volume.name $configMap.name) "component" $component) | nindent 4 }}
 data:
   {{- range $filename, $content := $configMap.spec.data }}
-  {{ $filename }}: |
+  {{ $filename }}: |-
 {{ $content | indent 4 }}
   {{- end }}
 ---
