--- a/charts/commons/templates/pvc.yaml
+++ b/charts/commons/templates/pvc.yaml
@@ -13,15 +13,15 @@ metadata:
     {{ include "commons.labels" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" (default $volume.name $pvc.name) "component" $component) | nindent 4 }}
 spec:
   accessModes:
-    - {{ $pvc.spec.accessMode | default $.Values.global.pvc.storage.accessMode }}
+    - {{ get (get $pvc "spec" | default dict) "accessMode" | default $.Values.global.pvc.storage.accessMode }}
   resources:
     requests:
-      storage: {{ $pvc.spec.storage | default $.Values.global.pvc.storage.size }}
-  storageClassName: {{ $pvc.spec.storageClassName | default $.Values.global.pvc.storage.storageClassName }}
-  {{- if $pvc.spec.volumeMode }}
+      storage: {{ get (get $pvc "spec" | default dict) "storage" | default $.Values.global.pvc.storage.size }}
+  storageClassName: {{ get (get $pvc "spec" | default dict) "storageClassName" | default $.Values.global.pvc.storage.storageClassName }}
+  {{- if get (get $pvc "spec" | default dict) "volumeMode" }}
   volumeMode: {{ $pvc.spec.volumeMode }}
   {{- end }}
-  {{- if $pvc.spec.selector }}
+  {{- if get (get $pvc "spec" | default dict) "selector" }}
   selector:
     {{- toYaml $pvc.spec.selector | nindent 4 }}
   {{- end }}
