--- a/charts/commons/templates/service.yaml
+++ b/charts/commons/templates/service.yaml
@@ -19,6 +19,9 @@ spec:
     - name: {{ .name }}
       port: {{ .port }}
       targetPort: {{ .targetPort | default .port }}
+      {{- with .protocol }}
+      protocol: {{ . }}
+      {{- end }}
       {{- if eq $.type "NodePort" }}
       {{- with .nodePort }}
       nodePort: {{ . }}
